Fix overflow formatting for gallery cards

--- a/frontend/src/components/gallery/gallery_card.scss
+++ b/frontend/src/components/gallery/gallery_card.scss
@@ -9,25 +9,25 @@
   cursor: pointer;
   gap: common.$spacing-medium;
   padding: common.$spacing-large;
-  width: 280px;
+  width: 300px;
   word-break: break-word;
 }
 
 .header {
   @include common.flex-row;
+  align-items: start;
   gap: common.$spacing-medium;
   justify-content: space-between;
 
-  .left,
   .right {
     @include common.flex-row-align-center;
+    flex-shrink: 0;
     gap: common.$spacing-medium;
   }
 }
 
 .title {
   @include typescale.title-medium;
-  word-break: break-all;
 }
 
 .chip {
@@ -39,7 +39,6 @@
   @include typescale.body-small;
   color: var(--md-sys-color-outline);
   text-decoration: italic;
-  word-break: break-all;
 }
 
 .footer {
